2009-11-20  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/nutritional_information/reccard_plugin.py (NutritionDisplayModule.enter_page):
	Fix keyError bug on initialization.

	* src/lib/plugins/nutritional_information/nutritionLabel.py (NutritionLabel.setup_yield_label):
	Use singular form for "amount per ___" yield unit.

	* src/lib/plugins/nutritional_information/export_plugin.py (NutritionBaseExporterPlugin.get_nutritional_info_as_text_blob):
	Use singular form for "amount per ____" yield unit.

	* src/lib/shopgui.py (ShopGui.setup_main): Don't show window
	initially.

	* src/lib/reccard.py (RecCardDisplay.update_yields_multiplier):
	Use singular forms when settings yields to 1.

2009-11-19  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/import_export/pdf_plugin/pdf_exporter.py (write_ingref):
	Only write links that will work -- we do this by tracking which
	recipes are going into our document and checking links against
	that list of recipes.

	* src/lib/plugins/import_export/pdf.gourmet-plugin.in: Change name
	and description to reflect this plugin's new status as the primary
	printing provider.

	* src/lib/exporters/printer.py: Add simple message telling user
	which plugin to install to get printing if there is no printing.

	* src/lib/exporters/exporter.py (ExporterMultirec.append_referenced_recipes):
	Add method to automatically append referenced recipes to the list
	of recipes to be exported.

	* src/lib/plugin_loader.py (MasterLoader.deactivate_plugin_set):
	Fix typo that broke deactivation of plugins.

2009-11-17  Thomas M. Hinkle  <tom@grenville>

	* src/lib/GourmetRecipeManager.py (ImporterExporter.print_recs):
	Use new printing API to print.
	* src/lib/plugin.py (PrinterPlugin): Add new plugin for printing.
	* src/lib/reccard.py (RecCardDisplay.print_cb): Use new printing
	API to print.
	* src/lib/shopgui.py (ShopGui.doSave): No longer use "lprprinter"
	to do text save.
	(ShopGui.printList): Use new printing API to print.